--- a/html/one/index.css
+++ b/html/one/index.css
@@ -52,7 +52,7 @@ nav a:hover {
 	padding-bottom: 2px;
 }
 
-nav:hover #Logonavbar {
+nav #Logonavbar:hover {
 	transform: scale(3);
 	padding-bottom: 2px;
 	color: #FF9300;
