--- a/html/three/music/index.css
+++ b/html/three/music/index.css
@@ -2,7 +2,7 @@ html {
 	font-family: allumi-std, sans-serif;
 	font-weight: 150;
 	font-style: normal;
-	background: no-repeat center fixed url(images/background.jpeg);
+	background: no-repeat center fixed url(images/background.jpg);
 	background-size: cover;
 	height: 100vh;
 }
@@ -84,14 +84,14 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 40em;
+    height: 20em;
 }
 
 #Bienvenue {
 	font-family: agenda,sans-serif;
 	font-weight: 700;
 	font-style: normal;
-	color: white;
+	color: rgb(255, 233, 174);
 	font-size: 4em;
 	display: flex;
 	flex-direction: row;
@@ -106,7 +106,22 @@ nav a:hover {
 	animation-delay: 0.6s;
 	animation-fill-mode: backwards;
 	font-size: 3.5em;
-	color: #FF9300;
+	color: #0084ff;
+}
+
+#Music-Box {
+	margin-top: 15vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+
+#Music-Box h1 {
+	background-image: ;
+	background-color: rgba(131, 179, 255, 0.436);
+	border-radius: 3px;
+	width: 500px;
+	height: 350px;
 }
 
 @keyframes AnimBienvenue {
