--- a/html/two/upload/files/delete.css
+++ b/html/two/upload/files/delete.css
@@ -2,14 +2,11 @@ html {
 	font-family: allumi-std, sans-serif;
 	font-weight: 150;
 	font-style: normal;
-	background: no-repeat center fixed url(images/background.jpg);
-	background-size: cover;
-	height: 100vh;
 }
 
 body {
-	margin: 0;
-	padding: 0;
+    background-color: #c587eb;
+    margin: 0;
 }
 
 header {
@@ -84,14 +81,14 @@ nav a:hover {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 20em;
+    height: 40em;
 }
 
 #Bienvenue {
 	font-family: agenda,sans-serif;
 	font-weight: 700;
 	font-style: normal;
-	color: rgb(255, 233, 174);
+	color: white;
 	font-size: 4em;
 	display: flex;
 	flex-direction: row;
@@ -103,25 +100,10 @@ nav a:hover {
 
 #Bienvenueh2 {
 	animation: AnimBienvenue 1s;
-	animation-delay: 0.6s;
+	animation-delay: 1.2s;
 	animation-fill-mode: backwards;
 	font-size: 3.5em;
-	color: #0084ff;
-}
-
-#Music-Box {
-	margin-top: 15vh;
-	display: flex;
-	justify-content: space-around;
-	align-items: center;
-}
-
-#Music-Box h1 {
-	background-image: ;
-	background-color: rgba(131, 179, 255, 0.436);
-	border-radius: 3px;
-	width: 500px;
-	height: 350px;
+	color: #FF9300;
 }
 
 @keyframes AnimBienvenue {
@@ -137,13 +119,19 @@ nav a:hover {
     }
 }
 
-#Bienvenue #M{
+#Bienvenue #W{
 	-webkit-animation: AnimBienvenue 1s;
 	animation : AnimBienvenue 1s;
+	animation-delay: 0.8s;
+	animation-fill-mode: backwards;}
+
+#Bienvenue #E{
+	-webkit-animation: AnimBienvenue 1s;
+	animation: AnimBienvenue 1s;
 	animation-delay: 0.6s;
 	animation-fill-mode: backwards;}
 
-#Bienvenue #U{
+#Bienvenue #B{
 	-webkit-animation: AnimBienvenue 1s;
 	animation: AnimBienvenue 1s;
 	animation-delay: 0.4s;
@@ -155,14 +143,20 @@ nav a:hover {
 	animation-delay: 0.2s;
 	animation-fill-mode: backwards;}
 
-#Bienvenue #I{
+#Bienvenue #E2{
 	-webkit-animation: AnimBienvenue 1s;
 	animation: AnimBienvenue 1s;
 	animation-delay: 0.4s;
 	animation-fill-mode: backwards;}
 
-#Bienvenue #C{
+#Bienvenue #R{
 	-webkit-animation: AnimBienvenue 1s;
 	animation: AnimBienvenue 1s;
 	animation-delay: 0.6s;
+	animation-fill-mode: backwards;}
+
+#Bienvenue #V{
+	-webkit-animation: AnimBienvenue 1s;
+	animation: AnimBienvenue 1s;
+	animation-delay: 0.8s;
 	animation-fill-mode: backwards;}
