--- a/html/one/cgi-bin/index.css
+++ b/html/one/cgi-bin/index.css
@@ -75,32 +75,60 @@ nav a:hover {
 	color: #FF9300;
 }
 
-#Upload {
+#page {
+	margin-top: 10vh;
     display: flex;
-    justify-content: center;
-    flex-direction: row;
+    justify-content: space-evenly;
     align-items: center;
     width: 100%;
-    height: 300px;
+	height: 30vh;
+	background-color: rgba(255, 255, 255, 0.26);
 }
 
-#Upload h1 {
-	font-family: agenda,sans-serif;
-	padding-right: 20px;
-	font-style: normal;
+#page a {
+	text-decoration: none;
+	font-size:xx-large;
+	font-weight: bolder;
+	border-bottom: 2px solid #666;
+	border-radius: 5px;
+	padding: 7px;
+	background-color: #FF9300;
 	color: white;
-	font-size: 2em;
 }
 
-#Submit {
-    display: flex;
-    flex-direction: column;
+#page a:hover {
+	background-color: #ffa600;
+}
+
+/* #php {
+} */
+
+#line {
+	border: 1px solid #ffffff;
+	height: 20vh;
+}
+
+#py {
+	padding-left: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	height: 20vh;
 	align-items: center;
+	text-align: left;
+}
+
+form {
+	border-top: 1px dashed black;
+	padding-top: 25px;
+	font-size: large;
+	font-weight: 500;
 }
 
 .button {
 	display: inline-block;
 	padding: 15px 25px;
+	/* margin-top: -10px; */
 	font-size: 24px;
 	cursor: pointer;
 	text-align: center;
@@ -119,26 +147,4 @@ nav a:hover {
   background-color: #FF9300;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
-}
-
-.labelFile {
-	display: inline-block;
-	padding: 15px 32px;
-	margin: 4px 2px;
-	border-radius: 5px;
-	border: none;
-	background-color: #FF9300;
-	color: rgb(255, 240, 219);
-	text-align: center;
-	text-decoration: none;
-	font-size: 20px;
-	cursor: pointer;
-} 
-
-.labelFile:hover {
-    background-color: #ffa600;
-}
-
-.inputFile {
-    display: none;
 }
